---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-11-23

  Changes:
    - Added "minimum threshold" setting, which allows tanks and pipes to be deleted when they only have a little amount of fluid (default: 100).

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-10-13

  Features:
    - Initial release.